frontend/src/app/components/stepper-pages/thread-selection-step/thread-selection-step.scss
::ng-deep .p-splitter .p-splitter-gutter {
    background-color: #333;
}

.container{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10px;
}

.contents{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    width: 100%;
    max-width: 1000px;
}

.image-frame{
    width: 100%;
}

canvas{
    max-width: 100%;
    max-height: 100%;
    display: block;
    height: 100%;
    width: 100%;
    image-rendering: pixelated;
    object-fit: contain;
}

.button-container{
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.palette-panel { // TODO fix alignment
    display: grid;
    grid-template-columns: repeat(auto-fill, 250px);
    gap: 1rem;
    padding: 1rem;
    align-content: start;
    justify-content: center;
    overflow-y: auto;
    height: 100%;
    direction: rtl;

    & > * {
        direction: ltr;
    }
}

